Bug 237194 - Payee completion triggers the new payee dialog when clearing by pressing a key
Summary: Payee completion triggers the new payee dialog when clearing by pressing a key
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-11 03:43 UTC by Alvaro Soliverez
Modified: 2010-05-28 10:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Soliverez 2010-05-11 03:43:05 UTC
Version:            (using KDE 4.4.3)
OS:                Linux
Installed from:    Archlinux Packages

Open an existing transaction which has a payee
Highlight (select) the payee
Press a key that is not in any of the existing payee.

I was able to reproduce this using Allan's anon test file, since that
one only has payees in the format P00000x, so it was easy to hit a
case where you didn't have an existing payee with that letter.

It doesn't happen if you paste the text instead of entering the text manually
Comment 1 Alvaro Soliverez 2010-05-17 02:07:26 UTC
SVN commit 1127573 by asoliverez:

Commited the patch provided by Cristian. It seems clean enough even if there might be some better way.

BUG:237194

 M  +2 -2      dialogs/kselecttransactionsdlg.cpp  
 M  +2 -2      widgets/register.cpp  
 M  +1 -1      widgets/register.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1127573
Comment 2 Cristian Oneț 2010-05-17 07:41:03 UTC
That commit was for BUG: 237872
Comment 3 Thomas Baumgart 2010-05-28 10:07:49 UTC
SVN commit 1131458 by tbaumgart:

BUG: 237194

 M  +1 -1      kmymoneymvccombo.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1131458