Commited the patch provided by Cristian. It seems clean enough even if there might be some better way.

BUG:237194

svn path=/trunk/playground/office/kmymoney/; revision=1127573